# VCMP-Store-Downloader

./: CMakeLists.txt  Changelog.txt  LICENSE.txt  README.md  data  libcurl-x64.lib  main.cxx  main.h  update.cxx
dep/: README.txt
lib/: CMakeLists.txt  main.cxx
store-gui-src/src+compiler/: FetchName.ahk  How to compile.txt  OpenUrl.ahk  Socket.ahk  store-gui.ahk
web/: file.php  get-store-url.php  index.html  update.php
